--- a/src/main/webapp/i18n/fa/global.json
+++ b/src/main/webapp/i18n/fa/global.json
@@ -7,6 +7,9 @@
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "ماهیت ها",
+        "staticPage": "Static Page",
+        "helpApp": "Help App",
+        "contactUs": "Contact Us",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
